--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
+        <fabric.version>2.2.29</fabric.version>
     </properties>
 
     <dependencies>
@@ -43,9 +44,8 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
-
+        
     <build>
         <plugins>
             <plugin>
@@ -62,6 +62,27 @@
                     <configuration>
                         <skipDockerBuild>true</skipDockerBuild>
                     </configuration>
+                </plugin>
+                  <plugin>
+                    <groupId>io.fabric8</groupId>
+                    <artifactId>fabric8-maven-plugin</artifactId>
+                    <version>${fabric.version}</version>
+                    <executions>
+                        <execution>
+                            <id>json</id>
+                            <phase>generate-resources</phase>
+                            <goals>
+                                <goal>json</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>attach</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>attach</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
